Updates server
